--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,14 @@
 
 @layer components {
   .page-active {
-    @apply text-cyan-800 dark:text-cyan-500;
+    @apply text-gray-800 dark:text-gray-100;
   }
+  .animate-scroll {
+    animation: scroll 25s linear infinite;
+  }
+}
+
+@keyframes scroll {
+  0%   { transform: translateX(0); }
+  100% { transform: translateX(-50%); }
 }
